# Mini-Blockchain

./: .gitignore  Cargo.toml  README.md  build.rs  tx.json
.database2/: IDENTITY  LOG  LOG.old.1752640572369961  MANIFEST-000005  MANIFEST-000009
cpp_crypto/: crypto_api.cpp  crypto_api.h
database/: 000008.sst  000013.sst  IDENTITY  LOG  LOG.old.1751378091671854  LOG.old.1751424736108657  LOG.old.1751424976443028  LOG.old.1751892316584991  LOG.old.1751892328853241  LOG.old.1751892846404492  LOG.old.1751899162284858  LOG.old.1751967183173606  LOG.old.1751967560192284  LOG.old.1751969988434376  LOG.old.1751970869492176  LOG.old.1751970975445979  LOG.old.1751975570515520  LOG.old.1751975815931743  LOG.old.1751976914791724  LOG.old.1751977218818652  LOG.old.1751977273647544  LOG.old.1751977277909949  LOG.old.1751977864908920  LOG.old.1751977952153828  LOG.old.1751978059191527  LOG.old.1751978185227772  LOG.old.1751978210615134  LOG.old.1751978298454054  LOG.old.1752578081647916  LOG.old.1752639671570657  MANIFEST-000010  MANIFEST-000015  OPTIONS-000012
database1/: 000008.sst  IDENTITY  LOG  LOG.old.1751468116982414  LOG.old.1751514126036501  LOG.old.1751514803783714  LOG.old.1751515129975888  LOG.old.1751522517984420  LOG.old.1751523075049026  LOG.old.1751526444178977  LOG.old.1751526570346849  LOG.old.1751527138577613  LOG.old.1751535592215145  MANIFEST-000046
database2/: 000008.sst  IDENTITY  LOG  LOG.old.1751468128750372  LOG.old.1751470775614280  LOG.old.1751470817675873  LOG.old.1751514145395519  LOG.old.1751514803825229  LOG.old.1751515130121773  MANIFEST-000030
src/: blockchain.rs  crypto.rs  lib.rs  main.rs  mempool.rs  p2p.rs  rpc.rs  state.rs
(+1 files in other folders)
