[package]
name = "evice_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

rocksdb = "0.22.0"
bincode = "1.3.3"
hex = "0.4"

tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.53", features = ["tokio", "gossipsub", "mdns", "noise", "tcp", "yamux", "macros"] }
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }

serde_json = "1.0"
sha2 = "0.10"

serde_bytes = "0.11"

actix-web = "4"

[build-dependencies]
cc = "1.0"
bindgen = "0.72" # Gunakan versi terbaru yang tersedia
